<resources>
    <string name="app_name">Evaluación</string>
    <string name="tvTitulo">La evaluación formativa es un proceso que realimenta el aprendizaje, posibilitando su regulación por parte del estudiante (Quevedo, 2021).\n</string>
    <string name="tvEtiquetaPM">PROFESOR:</string>
    <string name="etDNI">Ingrese DNI</string>
    <string name="tvFechaR">aaaa/mm/dd</string>
    <string name="tvDNIM">---</string>
    <string name="tvEtiquetaMM">PROYECTO:</string>
    <string name="miMatricula">Proyecto</string>
    <string name="tvPS">PS</string>
    <string name="rbIdentidad">Identidad</string>
    <string name="rbConvive">Convive</string>
    <string name="rbDios">Dios</string>
    <string name="tvPs">Ps</string>
    <string name="rbMotricidad">Motricidad</string>
    <string name="tvCo">Co</string>
    <string name="rbComunica">Comunica</string>
    <string name="rbLee">Lee</string>
    <string name="rbEscribe">Escribe</string>
    <string name="rbCrea">Crea</string>
    <string name="rbCastellano">Castellano</string>
    <string name="tvMa">Ma</string>
    <string name="rbCantidad">Cantidad</string>
    <string name="rbEspacio">Espacio</string>
    <string name="tvCT">CT</string>
    <string name="rbExplora">Explora</string>
    <string name="buInicio">C</string>
    <string name="buProceso">B</string>
    <string name="buEsperado">A</string>
    <string name="buDestacado">AD</string>
    <string name="ibArribaMa">Subir</string>
    <string name="ibAbajoMa">Bajar</string>
    <string name="tvEtiquetaPaM">PROYECTO APRENDIZAJE:</string>
    <string name="miProyetoA">EVALUACIÓN</string>
    <string name="tvEtiquetaAM">AULA:</string>
    <string name="tvTituloC">Aula</string>
    <string name="tvContenidoC">El aula o salón de clases es aquel entorno físico-humano donde se desarrolla la enseñanza institucionalizada y todas las actividades los dos actores del proceso de enseñanza y aprendizaje, el educador y el educando. Esta, no sólo es el escenario físico donde se efectúa el trabajo pedagógico, sino fundamentalmente es un ámbito socio afectivo (Vílchez et al., 2015).\n</string>
    <string name="tvDenominacion">Denominación</string>
    <string name="tvAnio">Año lectivo</string>
    <string name="tvMensajeC">Escoger nivel</string>
    <string name="miProfesor">Profesor</string>
    <string name="tvContenidoP">El profesor es un profesional de la educación, con título de profesor o licenciado en educación, con calificaciones y competencias debidamente certificadas que, en su calidad de agente fundamental del proceso educativo, presta un servicio público esencial dirigido a concretar el derecho de los estudiantes y de la comunidad a una enseñanza de calidad, equidad y pertinencia. Requiere de desarrollo integral y de una formación continua e intercultural (Ley Nº 29062, 2007).\n</string>
    <string name="etApellidos">Ingrese apellidos</string>
    <string name="etNombres">Ingrese nombres</string>
    <string name="rbMasculino">Masculino</string>
    <string name="rbFemenino">Femenino</string>
    <string name="ibCalendario">Calendario</string>
    <string name="etFecha">dd/mm/aaaa</string>
    <string name="miEstudiante">Estudiante</string>
    <string name="tvContenidoE">El estudiante es el centro del proceso y del sistema educativo. Requiere de un sistema educativo eficiente, con instituciones y profesores responsables para su aprendizaje y desarrollo integral, deden recibir buen trato y una adecuada orientación al formar parte del sistema u otras alternativas para culminar su educación (RV 334-2021-MINEDU, 2021).\n</string>
    <string name="tvCelular">Número celular (PADRE)</string>
    <string name="miEBR">Educación Básica Regular</string>
    <string name="tvContenidoEBR">La Educación Básica Regular (EBR), está dirigida a los niños y adolescentes que pasan, oportunamente, por el proceso educativo de acuerdo con su evolución física, afectiva y cognitiva, desde el momento de su nacimiento (INEI, 2018).\n</string>
    <string name="tvCodigo">Código (autogenerado)</string>
    <string name="miCiclo">Edad / Grado</string>
    <string name="tvContenidoCi">Ciclo I: Inicial no escolarizado 0-2 años, Ciclo II: Inicial escolarizado 3-5 años, Ciclo III: Primaria 1er y 2do grado, Ciclo IV: Primaria 3er y 4to grado, Ciclo V: Primaria 5to y 6to grado, Ciclo VI: Secundaria 1er y 2do año, Ciclo VII: Secundaria 3er a 5to año (INEI, 2018).\n</string>
    <string name="miPlanE">Plan de Estudio</string>
    <string name="tvContenidoPe">Las áreas curriculares organiza, articulan e integran las competencias para desarrollar en los estudiantes las experiencias de aprendizaje. Se organizan según los ciclos y configuran el plan de estudios para los niveles educativos de la Educación Básica (RM 281-2016-MINEDU, 2016).\n</string>
    <string name="buRegistrar">Registrar</string>
    <string name="buBuscar">Buscar</string>
    <string name="buModificar">Modificar</string>
    <string name="buEliminar">Eliminar</string>
    <string name="buSeguimiento">Seguimiento</string>
    <string name="buEstrategia">Estrategia</string>
    <string name="ibSalir">Salir</string>
</resources>